[package]
name = "lacu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.3", default-features = false }
egui = "0.17"
egui-macroquad = "0.9.0"

[profile.release]
lto = true
opt-level = 's'
